# sinaps

./: CMakeLists.txt  LICENSE  README.md
include/: sinaps.hpp
include/sinaps/: masks.hpp  pattern.hpp  token.hpp  utils.hpp
single_include/: sinaps.hpp
test/: main.cpp
